@@ -1,6 +1,6 @@
 // Emulates the page header of some N9 apps
 
-import QtQuick 1.0
+import QtQuick 1.1
 import com.nokia.meego 1.0
 
 Rectangle {
