@@ -1,6 +1,6 @@
 // Temporarily reveal toolbar on double-tap
 
-import QtQuick 1.0
+import QtQuick 1.1
 import com.nokia.meego 1.0
 
 Item {
